tests/compile-fail/Rule_16_6.rs
#![deny(clippy)]
#[deny(warnings)]

fn main() {
    let i = 1;
    match i {
        _ => {},
    }
}
